--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style src="assets/css/style.css"></style>
-    <script src="assets/javascript/game.js"></script>
   </head>
   <body>
     <h1>
@@ -16,7 +15,7 @@
     </div>
     <div>
       Wins:
-      <div id="win-count">0</div>
+      <div id="win-count"></div>
     </div>
     <div>
       Losses:
@@ -30,5 +29,6 @@
       You guessed:
       <div id="guess-tracker"></div>
     </div>
+    <script src="assets/javascript/game.js"></script>
   </body>
 </html>
