added end of game messages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       You guessed:
       <div id="guess-tracker"></div>
     </div>
+    <div id="end-game-status"></div>
+    <div id="press-any-key-to-continue"></div>
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
